--- a/GroceryGame/Base.lproj/Main.storyboard
+++ b/GroceryGame/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -100,14 +99,14 @@
                                                         <constraint firstAttribute="width" secondItem="X3S-Zh-hRn" secondAttribute="height" multiplier="1:1" id="14z-bg-47e"/>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="33.5" id="cFa-wH-q22"/>
                                                     </constraints>
-                                                    <state key="normal" title="Edit Icon" image="editIcon"/>
+                                                    <state key="normal" title="Edit Icon" image="EditIcon"/>
                                                     <connections>
                                                         <segue destination="hWc-1X-TlE" kind="show" identifier="EditList" id="rlw-GP-8bu"/>
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMj-sR-KnZ">
                                                     <rect key="frame" x="41.5" y="0.0" width="33.5" height="33.5"/>
-                                                    <state key="normal" title="Delete Icon" image="trashcan"/>
+                                                    <state key="normal" title="Delete Icon" image="Trashcan"/>
                                                     <connections>
                                                         <action selector="deleteSelectedGroceryList:" destination="DmG-mm-3P9" eventType="touchUpInside" id="VtB-6N-Q7s"/>
                                                     </connections>
@@ -438,9 +437,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="editIcon" width="428" height="414"/>
+        <image name="EditIcon" width="428" height="414"/>
+        <image name="Trashcan" width="344" height="367"/>
         <image name="groceryStore" width="640" height="828"/>
-        <image name="trashcan" width="344" height="367"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="rlw-GP-8bu"/>
